--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,11 +34,10 @@ jobs:
       - name: Download FFmpeg
         run: |
           mkdir ffmpeg
-          curl -L -o ffmpeg.zip https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip
+          curl -L -o ffmpeg.zip https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip
           tar -xf ffmpeg.zip
-          $ffmpegDir = Get-ChildItem -Directory -Filter "ffmpeg-*" | Select-Object -First 1
-          Copy-Item "$($ffmpegDir.FullName)\bin\ffmpeg.exe" "ffmpeg\ffmpeg.exe"
-          Write-Host "FFmpeg ready at ffmpeg\ffmpeg.exe"
+          Copy-Item "ffmpeg-master-latest-win64-gpl\bin\ffmpeg.exe" "ffmpeg\ffmpeg.exe"
+          Write-Host "FFmpeg ready"
         shell: powershell
 
       - name: Check dependencies
