--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Download FFmpeg
         run: |
           mkdir ffmpeg
-          curl -L -o ffmpeg.zip https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip
+          curl.exe -L -o ffmpeg.zip https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl.zip
           tar -xf ffmpeg.zip
           Copy-Item "ffmpeg-master-latest-win64-gpl\bin\ffmpeg.exe" "ffmpeg\ffmpeg.exe"
           Write-Host "FFmpeg ready"
